--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header class="site-header">
-    <a class="brand" href="#home">Saymon C. Villa</a>
+    <a class="brand" href="#home">Saymon Villa</a>
     <nav class="nav" id="nav">
       <a href="#home" class="nav-link">Home</a>
       <a href="#about" class="nav-link">About</a>
@@ -114,9 +114,9 @@
           <div>
             <p>Want to work together or see source code? Drop a message.</p>
             <ul class="contact-list">
-              <li><strong>Email:</strong> <a href="mailto:your.email@example.com">your.email@example.com</a></li>
-              <li><strong>GitHub:</strong> <a href="https://github.com/yourprofile" target="_blank">github.com/yourprofile</a></li>
-              <li><strong>LinkedIn:</strong> <a href="https://linkedin.com/in/yourprofile" target="_blank">linkedin.com/in/yourprofile</a></li>
+              <li><strong>Email:</strong> <a href="mailto:saymonchristianvilla@gmail.com">saymonchristianvilla@gmail.com</a></li>
+              <li><strong>GitHub:</strong> <a href="https://github.com/scvilla07th" target="_blank">github.com/scvilla07th</a></li>
+              <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/saymon-christian-villa/" target="_blank">linkedin.com/in/saymon-christian-villa</a></li>
             </ul>
           </div>
 
@@ -153,3 +153,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
