--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
           </div>
           <div class="about-card">
             <ul>
-              <li><strong>Location:</strong> Philippines</li>
-              <li><strong>Email:</strong> your.email@example.com</li>
-              <li><strong>GitHub:</strong> github.com/yourprofile</li>
-              <li><strong>LinkedIn:</strong> linkedin.com/in/yourprofile</li>
+              <li><strong>Location:</strong> Tayabas City, Quezon Province, Philippines</li>
+              <li><strong>Email:</strong> saymonchristianvilla@gmail.com</li>
+              <li><strong>GitHub:</strong> https://github.com/scvilla07th</li>
+              <li><strong>LinkedIn:</strong> https://www.linkedin.com/in/saymon-christian-villa/</li>
             </ul>
           </div>
         </div>
@@ -153,4 +153,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
