--- a/index.html
+++ b/index.html
@@ -63,6 +63,21 @@
     </div>
   </section>
 
+  <section id="about" class="about-section">
+  <div class="container">
+    <h2>About Me</h2>
+    <p>
+      Hello! I'm <strong>[Your Name]</strong>, a passionate <strong>Software Design Engineer</strong> who loves creating efficient and user-focused solutions.
+      My approach to building software is guided by the belief that <em>"It's not how much time you have, it's how you use it."</em>
+    </p>
+    <p>
+      I enjoy designing and developing systems that solve real-world problems. Whether it's optimizing code, improving user experience, or exploring new technologies, 
+      I'm always excited to turn ideas into reality through clean and effective software design.
+    </p>
+  </div>
+</section>
+
+
   <!-- ===== CONTACT SECTION ===== -->
   <section id="contact" class="section contact">
     <h2 class="section-title animate-slide">Contact Me</h2>
@@ -81,3 +96,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
