--- a/index.html
+++ b/index.html
@@ -77,23 +77,101 @@
   </div>
 </section>
 
+<section id="skills" class="skills-section">
+  <div class="container">
+    <h2>Skills & Tools</h2>
+    <p>Here are the technologies and tools I use to design and build software:</p>
 
-  <!-- ===== CONTACT SECTION ===== -->
-  <section id="contact" class="section contact">
-    <h2 class="section-title animate-slide">Contact Me</h2>
-    <p class="contact-text animate-fade">Want to work together or see more source code? Drop a message below.</p>
-    <ul class="contact-list animate-up">
-      <li><strong>Email:</strong> <a href="mailto:saymonchristianvilla@gmail.com">saymonchristianvilla@gmail.com</a></li>
-      <li><strong>GitHub:</strong> <a href="https://github.com/scvilla07th" target="_blank">github.com/scvilla07th</a></li>
-      <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/saymon-christian-villa/" target="_blank">linkedin.com/in/saymon-christian-villa</a></li>
-    </ul>
-  </section>
+    <div class="skills-container">
+      <div class="skill">
+        <h3>HTML5</h3>
+        <div class="progress-bar"><span style="width: 90%;"></span></div>
+      </div>
+      <div class="skill">
+        <h3>CSS3</h3>
+        <div class="progress-bar"><span style="width: 85%;"></span></div>
+      </div>
+      <div class="skill">
+        <h3>JavaScript</h3>
+        <div class="progress-bar"><span style="width: 75%;"></span></div>
+      </div>
+      <div class="skill">
+        <h3>Python</h3>
+        <div class="progress-bar"><span style="width: 70%;"></span></div>
+      </div>
+      <div class="skill">
+        <h3>Git & GitHub</h3>
+        <div class="progress-bar"><span style="width: 80%;"></span></div>
+      </div>
+    </div>
+  </div>
+</section>
 
-  <footer>
-    <p>© 2025 Saymon Christian Villa. All rights reserved.</p>
-  </footer>
+<section id="projects" class="projects-section">
+  <div class="container">
+    <h2>Projects</h2>
+    <p>Here are some of the projects I've worked on, showcasing my skills in software design and development.</p>
+
+    <div class="projects-grid">
+      <div class="project-card">
+        <div class="project-image"></div>
+        <div class="project-content">
+          <h3>Speech Recognition System</h3>
+          <p>A Raspberry Pi–based system that evaluates pronunciation accuracy in real time using Vosk and Google API.</p>
+          <a href="#" target="_blank" class="btn">View Project</a>
+        </div>
+      </div>
+
+      <div class="project-card">
+        <div class="project-image"></div>
+        <div class="project-content">
+          <h3>4-Story Elevator System</h3>
+          <p>A Verilog-based digital system simulating elevator logic with floor selection, priority handling, and floor display.</p>
+          <a href="#" target="_blank" class="btn">View Project</a>
+        </div>
+      </div>
+
+      <div class="project-card">
+        <div class="project-image"></div>
+        <div class="project-content">
+          <h3>Temperature Conversion System</h3>
+          <p>An FPGA project that converts temperature units with real-time output display and error handling features.</p>
+          <a href="#" target="_blank" class="btn">View Project</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section id="contact" class="contact-section">
+  <div class="container">
+    <h2>Contact Me</h2>
+    <p>Want to work together or see more of my work? Let’s connect!</p>
+
+    <div class="contact-info">
+      <ul>
+        <li><strong>Email:</strong> <a href="mailto:saymonchristianvilla@gmail.com">saymonchristianvilla@gmail.com</a></li>
+        <li><strong>GitHub:</strong> <a href="https://github.com/scvilla07th" target="_blank">github.com/scvilla07th</a></li>
+        <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/saymon-christian-villa/" target="_blank">linkedin.com/in/saymon-christian-villa</a></li>
+      </ul>
+    </div>
+
+    <form class="contact-form" action="mailto:saymonchristianvilla@gmail.com" method="post" enctype="text/plain">
+      <input type="text" name="name" placeholder="Your Name" required>
+      <input type="email" name="email" placeholder="Your Email" required>
+      <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
+      <button type="submit">Send Message</button>
+    </form>
+  </div>
+</section>
+
+<footer class="footer">
+  <p>© 2025 Saymon Christian Villa. All Rights Reserved.</p>
+</footer>
+
 
   <script src="script.js"></script>
 </body>
 </html>
+
 
