--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <!-- ===== HERO SECTION ===== -->
-  <header class="hero">
+  <header class="hero-section">
     <div class="hero-content">
       <h1 class="animate-slide">Saymon Christian Villa</h1>
       <h2 class="animate-fade">Software Design</h2>
@@ -128,6 +128,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
